inquirybuilder/force-app/main - final/default/objects/CSA_Inquiry__c/CSA_Inquiry__c.object-meta.xml
<CustomObject>
    <label>Inquiry</label>
    <nameField>
        <displayFormat>CSA-INQ-{0000}</displayFormat>
        <label>Inquiry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inquiry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>