inquirybuilder/force-app/main - final/default/objects/CSA_Inquiry__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email Id to send access code</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>