inquirybuilder/force-app/main - final/default/objects/CSA_Inquiry__c/fields/Inquiry_Template__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inquiry Template</label>
    <referenceTo>CSA_Inquiry_Template__c</referenceTo>
    <relationshipLabel>Inquiry</relationshipLabel>
    <relationshipName>Inquiry</relationshipName>
    <type>Lookup</type>
</CustomField>